--- a/humanitarian-cases.html
+++ b/humanitarian-cases.html
@@ -72,10 +72,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="Home.html">الرئيسية</a>
+              <a class="nav-link active" href="index.html">الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="Home.html">آخر الأخبار</a>
+              <a class="nav-link active" href="index.html">آخر الأخبار</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="humanitarian-cases.html">الحالات</a>
@@ -334,7 +334,7 @@
               style="width: 60px; background-color: #ffffff; height: 2px"/>
               
           <p>
-            <a href="Home.html" class="ft-li text-white fl text-decoration-none">الرئيسية</a>
+            <a href="index.html" class="ft-li text-white fl text-decoration-none">الرئيسية</a>
             <hr>
           </p>
           <p>
