--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!--------End Header ---------->
 
 <!--------Start Container -------->
-<img src="../Datai/ihsan_31.jpg" alt="" class="img_home">
+<img src="Datai/ihsan_31.jpg" alt="" class="img_home">
 <div class="container mb-5 mw-100 "> 
       <div class="div_unter_header_home">
             <p class="unter_header_p_home">
